# beeware-bundling-tests

./: .gitignore  README.md  cleanup.sh  setup.sh
briefcase-plugin/: README.md  cmake.py
test-cmake/: CMakeLists.m.txt  CMakeLists.txt  README.md  main.c  main.m
test-cmake-c/: CMakeLists.txt  Makefile  README.md  main.c
test-cmake-objc/: .gitignore  CMakeLists.txt  LICENSE  README.md
test-xcode/: README.md
test-xcode/Demo/: briefcase.toml
test-xcode/Demo/Demo/: Info.plist
test-xcode/Demo/Demo.xcodeproj/: project.pbxproj
test-xcode/Demo/Demo/app/demo/: __main__.py
